block untrusted mint temporaty by it's balance

--- a/ext/sas.toml
+++ b/ext/sas.toml
@@ -21,6 +21,8 @@ mints = [
 ]
 # for api /v1/info
 expired = "14 Days"
+# untrusted_mint_balance_limit = 512
+# untrusted_mint_should_transfer = 132
 
 # cost_per_event = 1
 # 10m
