--- a/ext/gas.toml
+++ b/ext/gas.toml
@@ -9,7 +9,7 @@ listen = "0.0.0.0:2001"
 allow_pending = false
 allow_free = false
 
-database = "relay.red"
+database = "relay.db"
 timeout_ms = 3000
 
 [fee]
