--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ members = ["ext", "s3tool"]
 
 [workspace.dependencies]
 # cashu-wallet = {path = "../cashu-wallet-rs/cashu-wallet"}
-cashu-wallet = {git = "https://github.com/keychat-io/cashu-wallet-rs.git", tag = "240905"}
+cashu-wallet = {git = "https://github.com/keychat-io/cashu-wallet-rs.git", tag = "241227"}
+cashu-wallet-sqlite = {git = "https://github.com/keychat-io/cashu-wallet-rs.git", tag = "241227"}
 #
 flume = "0.11"
 futures = "0.3"
